"update git url"

--- a/options.conf
+++ b/options.conf
@@ -2,7 +2,7 @@
 name = R-collections
 url = https://cran.r-project.org/src/contrib/collections_0.2.4.tar.gz
 archives = 
-giturl = 
+giturl = https://github.com/randy3k/collections.git
 domain = 
 
 [autospec]
