R-collections: Autospec creation for update from version 0.2.4 to version 0.2.5

--- a/options.conf
+++ b/options.conf
@@ -1,9 +1,10 @@
 [package]
 name = R-collections
-url = https://cran.r-project.org/src/contrib/collections_0.2.4.tar.gz
+url = https://cran.r-project.org/src/contrib/collections_0.2.5.tar.gz
 archives = 
 giturl = https://github.com/randy3k/collections.git
 domain = 
+alias = 
 
 [autospec]
 # build 32 bit libraries
