--- a/options.conf
+++ b/options.conf
@@ -1,6 +1,6 @@
 [package]
 name = R-collections
-url = https://cran.r-project.org/src/contrib/collections_0.3.7.tar.gz
+url = https://ftp.osuosl.org/pub/cran/src/contrib/collections_0.3.8.tar.gz
 archives = 
 giturl = https://github.com/randy3k/collections.git
 domain = 
